refactor(excel): 优化Excel相关实现并统一注释风格
- 统一所有注解类添加作者、创建时间和描述信息的JavaDoc注释
- 给注解添加@Inherited注解，明确继承性
- 优化ExcelDictConvert中DictService的单例获取，提升性能
- 在ExcelEnumConvert中添加枚举缓存，避免重复解析提升效率
- CellMergeStrategy新增行索引映射，避免遍历所有合并区域优化性能
- DefaultExcelListener新增ignoreError配置，支持异常忽略处理
- 修改ExcelDownHandler优化数据处理，使用LinkedList更安全高效
- ExcelUtil中优化多处代码格式和异常处理方式，统一导出接口调用
- 改进ExcelWriterWrapper，删除无用注释和多余空行，简化代码结构
- 大量代码空格、缩进和换行调整，提高代码可读性和一致性