@@ -15,9 +15,9 @@ import java.lang.reflect.Field;
 import java.util.*;
 
 /**
- * 单元格合并处理器
- *
- * @author Lion Li
+ * @Author: Lion Li
+ * @CreateTime: 2026-01-22
+ * @Description: 单元格合并处理器
  */
 public class CellMergeHandler {
 
@@ -38,7 +38,7 @@ public class CellMergeHandler {
         }
 
         // 获取有合并注解的字段
-        Map<Field, FieldColumnIndex> mergeFields = getFieldColumnIndexMap(rows.get(0).getClass());
+        Map<Field, FieldColumnIndex> mergeFields = getFieldColumnIndexMap(rows.getFirst().getClass());
         // 如果没有需要合并的字段则返回空集
         if (CollUtil.isEmpty(mergeFields)) {
             return Collections.emptyList();
@@ -196,5 +196,4 @@ public class CellMergeHandler {
     public static CellMergeHandler of() {
         return new CellMergeHandler(false);
     }
-
 }
